tests/parser/error/definition_many_error.out
tests/parser/error/definition_many_error.st:1:5
1 | def 2 := 3
        ^
Error: Expected identifier.

tests/parser/error/definition_many_error.st:6:10
6 | def b := _
             ^
Error: Expected expression.

tests/parser/error/definition_many_error.st:8:11
8 | def c := 6bob
              ^^^
Error: Expected keyword 'def'.

